--- a/src/css/Console.css
+++ b/src/css/Console.css
@@ -43,6 +43,7 @@
 }
 
 .console-input {
+    flex-wrap: wrap;
     display: flex;
     align-items: center;
     width: 100%;
@@ -50,6 +51,7 @@
 }
 
 .console-input .input {
+    margin-top: 10px;
     flex-grow: 1;
     padding: 10px;
     font-size: 16px;
@@ -58,6 +60,7 @@
 }
 
 .console-input button {
+    margin-top: 10px;
     margin-left: 10px;
     padding: 10px 15px;
 }
