--- a/src/css/ServerForm.css
+++ b/src/css/ServerForm.css
@@ -64,6 +64,7 @@
   }
   
   .form-actions {
+    flex-wrap: wrap;
     display: flex;
     justify-content: space-between;
     align-items: center;
