--- a/src/App.css
+++ b/src/App.css
@@ -27,7 +27,9 @@ body, html {
 .content-wrapper {
   background: linear-gradient(145deg, #161b22, #21262d);
   padding: 30px;
-  border-radius: 12px;
-  box-shadow: 4px 4px 10px rgba(0, 0, 0, 0.6), -4px -4px 10px rgba(255, 255, 255, 0.05);
+  border-radius: 8px;
   width: 80%;
+
+  box-shadow: 0px 4px 10px rgba(0, 0, 0, 0.3);
+  border: 1px solid #30363d;
 }
