refactor certificates details and show error when you try added certs or ovpn files

--- a/src/css/Certificates.css
+++ b/src/css/Certificates.css
@@ -18,8 +18,12 @@
     flex-wrap: wrap;
   }
   
+  .message-success {
+    color: green;
+    margin-top: 10px;
+  }
   
-
-  
-
-  
+  .message-error {
+    color: red;
+    margin-top: 10px;
+  }
