--- a/src/css/CertificatesTable.css
+++ b/src/css/CertificatesTable.css
@@ -1,13 +1,14 @@
 .table-container {
   width: 100%;
   background-color: #0d1117;
-  padding: 15px;
   border-radius: 8px;
+  margin-top: 15px;
 }
 
 .filters {
   display: flex;
   gap: 10px;
+  padding: 15px;
   margin-bottom: 15px;
   flex-wrap: wrap;
 }
