--- a/src/css/Settings.css
+++ b/src/css/Settings.css
@@ -54,3 +54,21 @@
 .input{
   width: 100%;
 }
+
+.error-message {
+  background: #300;
+  color: #c9d1d9;
+  padding: 5px;
+  border-radius: 5px;
+  font-size: 18px;
+  margin-top: 5px;
+}
+
+.success-message {
+  background: #238636;
+  color: #c9d1d9;
+  padding: 5px;
+  border-radius: 5px;
+  font-size: 19px;
+  margin-top: 5px;
+}
