--- a/src/css/ServerList.css
+++ b/src/css/ServerList.css
@@ -47,7 +47,7 @@
   }
   
   .server-item:hover {
-    border-color: #58a6ff;
+    border-color: #959da5;
     box-shadow: 0 4px 8px rgba(88, 166, 255, 0.3);
   }
   
