--- a/src/css/ServerList.css
+++ b/src/css/ServerList.css
@@ -73,8 +73,8 @@
     grid-template-columns: repeat(auto-fit, minmax(250px, 1fr));
     gap: 10px;
     margin-top: 10px;
-    max-width: 900px;
-  }
+    max-width: clamp(900px, 80vw, 2024px);
+  }  
 
   .detail-row {
       display: flex;
@@ -101,37 +101,6 @@
       max-width: 400px;
   }
 
-  @media (min-width: 1024px) {
-      .server-details {
-          gap: 8px;
-          max-width: 1024px;
-      }
-
-      .detail-row {
-          gap: 4px;
-          padding: 2px 6px;
-      }
-
-      .server-actions {
-          max-width: 300px;
-      }
-  }
-
-  @media (min-width: 2024px) {
-    .server-details {
-        gap: 8px;
-        max-width: 2024px;
-    }
-
-    .detail-row {
-        gap: 4px;
-        padding: 2px 6px;
-    }
-
-    .server-actions {
-        max-width: 300px;
-    }
-}
   
   .server-actions {
     margin-top: 20px;
