Improves UI/UX and adds API URL to server form
Updates the UI to be more user-friendly by adjusting paddings, margins, and button sizes.

Adds the ability to specify an API URL when creating or editing a server.

Fixes minor issues and updates dependencies.

--- a/src/App.css
+++ b/src/App.css
@@ -19,7 +19,7 @@ body, html {
 .main-content {
   justify-content: center;
   align-items: center;
-  padding: 20px;
+  padding: 2px;
 }
 
 .content-wrapper {
@@ -27,7 +27,7 @@ body, html {
   padding: 30px;
   border-radius: 8px;
   width: 80%;
-
+  margin: 0 auto;
   box-shadow: 0px 4px 10px rgba(0, 0, 0, 0.3);
   border: 1px solid #30363d;
 }
